<?xml version="1.0" encoding="utf-8"?>
<!--
Created by Wes Turney on 12/17/13.

VirtualHopeBox

Copyright © 2009-2014 United States Government as represented by
the Chief Information Officer of the National Center for Telehealth
and Technology. All Rights Reserved.

Copyright © 2009-2014 Contributors. All Rights Reserved.

THIS OPEN SOURCE AGREEMENT ("AGREEMENT") DEFINES THE RIGHTS OF USE,
REPRODUCTION, DISTRIBUTION, MODIFICATION AND REDISTRIBUTION OF CERTAIN
COMPUTER SOFTWARE ORIGINALLY RELEASED BY THE UNITED STATES GOVERNMENT
AS REPRESENTED BY THE GOVERNMENT AGENCY LISTED BELOW ("GOVERNMENT AGENCY").
THE UNITED STATES GOVERNMENT, AS REPRESENTED BY GOVERNMENT AGENCY, IS AN
INTENDED THIRD-PARTY BENEFICIARY OF ALL SUBSEQUENT DISTRIBUTIONS OR
REDISTRIBUTIONS OF THE SUBJECT SOFTWARE. ANYONE WHO USES, REPRODUCES,
DISTRIBUTES, MODIFIES OR REDISTRIBUTES THE SUBJECT SOFTWARE, AS DEFINED
HEREIN, OR ANY PART THEREOF, IS, BY THAT ACTION, ACCEPTING IN FULL THE
RESPONSIBILITIES AND OBLIGATIONS CONTAINED IN THIS AGREEMENT.

Government Agency: The National Center for Telehealth and Technology
Government Agency Original Software Designation: VirtualHopeBox001
Government Agency Original Software Title: VirtualHopeBox
User Registration Requested. Please send email
with your contact information to: robert.a.kayl.civ@mail.mil
Government Agency Point of Contact for Original Software: robert.a.kayl.civ@mail.mil
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_eula_wrapper"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <RelativeLayout
            android:id="@+id/lay_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" >


            <TextView
                android:id="@+id/lbl_t2_line2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/spacer"
                android:layout_alignLeft="@+id/lbl_t2_line1"
                android:singleLine="true"
                android:text="@string/t2_line_2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbl_t2_line1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/lbl_t2_line2"
                android:layout_toRightOf="@+id/img_logo"
                android:text="@string/t2_line_1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/spacer"
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_alignBottom="@+id/img_logo"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/img_logo"
                android:background="@color/action_bar_blue" />
        </RelativeLayout>

        <TextView
            android:id="@+id/lbl_eula_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:text="@string/eula_header"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dha"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula4"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula5"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula6"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula7"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula8"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula9"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula10"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula11"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula12"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula13"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula14"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula15"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula16"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula17"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:lineSpacingExtra="2dp"
            android:text="@string/dhaeula18"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/sel_text" />

        <LinearLayout
            android:id="@+id/lay_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="bottom|center_horizontal" >

            <Button
                android:id="@+id/btn_decline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/eula_decline"
                android:text="@string/eula_decline"
                android:filterTouchesWhenObscured="true" />

            <Button
                android:id="@+id/btn_accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/eula_accept"
                android:text="@string/eula_accept"
                android:filterTouchesWhenObscured="true" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>